--- a/src/components/Favorites/Favorites.css
+++ b/src/components/Favorites/Favorites.css
@@ -5,12 +5,12 @@ body {
 .container {
 	display: flex;
 	flex-wrap: wrap;
-    justify-content: center;
+  justify-content: center;
 }
 
 .element {
     position: relative;
-    width: 33%;
+    margin: 12px;
 }
 
 .picture {
